--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Página 02</title>
   </head>
 
-  <body style="background-color: #cf70d1">
+  <body style="background-color: #dc8110">
     <h1>Página 01 - script antigo</h1>
     <div id="box_abmex"></div>
   </body>
