--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script>
     opts = {
       key: "57751f7d-e580-4679-b9ee-67ae60569525",
-      url: "https://localhost:3000",
+      url: "https://abmex-checkout-front-3074q91xx-abmex-platform.vercel.app/",
     };
     Upsell.Widget.show(opts);
   </script>
